feat: HWP 3.x(레거시 바이너리) 및 HWPML 3.0 읽기 지원 추가 + JDK 17 전환
기존 HWP5 경로는 손대지 않는 순수 추가 방식.

JDK 베이스 7 → 17 전환:
- pom: source/target 17 (deprecated compilerVersion 제거)
- HWPReader: javax.xml.bind.DatatypeConverter → java.util.Base64
- ForDocInfo: 미사용 com.sun.jmx.snmp.agent 임포트 제거

포맷 자동 판별(P0):
- FileFormat 열거형 + FormatDetector(OLE/HWP3 sig/XML, BOM·UTF-16)
- HWPLibReader 통합 진입점 → 판별 후 라우팅, 공통 HWPFile 반환

HWPML 3.0 리더(P1, 텍스트 추출 사실상 완결):
- HWPMLReader(StAX 재귀 하강) + ForHead(HEAD→DocInfo)
- 본문 문단/글자(M1) + 글꼴/글자모양/문단모양/스타일/번호(M2)
- 표(ControlTable) + 그리기 개체/글상자(GSO TextBox, M3)
- 검증: 동일 문서 6종에서 HWP5 추출 대비 텍스트 ≥99.9%(3종 100%)

HWP 3.x 레거시 바이너리 리더(P2):
- Hwp3StreamReader(리틀엔디언 + raw DEFLATE 해제)
- HWP3Reader C1: 헤더/압축/섹션(글꼴·스타일) 구조 파싱
- Hwp3CharDecoder C2: hchar→유니코드(조합형 5-5-5), 실문서 검증
- C3(문단/특수문자 순회)·C6(HWPFile 변환)는 잔여

상세 계획·진행 상황: docs/hwp3-hwpml-support-plan.md
(검증용 코퍼스·규격 PDF는 .gitignore로 로컬 유지)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>